# data-index

./: .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  CONTEXT.md  Dockerfile  Makefile  README.md  constraints.txt  deploy-test.py  example_aodn_index_queries.ipynb  install_s5cmd.sh  prefect.yaml  pyproject.toml  requirements.txt  structured_metadata.parquet  temp.json
.github/workflows/: ci.yml  release.yml
_legacy/data_indexer/: aodn_data_indexer.py  csv_to_stac.py  nc_to_stac.py
analysis/: 1000-cut.ipynb  metadata.ipynb  xarray_testing.ipynb
analysis/structured_metadata/: data_management_queries.ipynb  live-table.ipynb  v1.ipynb  v3.ipynb  v5.ipynb
data_indexer/: aodn_data_indexer.py  nc_to_stac.py
docs/: handoff.md  managing-ecr.md  managing-s3-tables.md
docs/adr/: 0001-diskcache-for-unstructured-metadata.md  0002-protocol-based-di-for-pipeline-components.md  0003-unstructured-metadata-as-injectable-protocol.md  0004-size-threshold-routing-in-file-fetcher.md  0005-naive-structured-extractor-pending-corpus-analysis.md  0006-s3-state-file-for-run-resumption.md  0007-pyiceberg-s3-tables-rest-catalog-for-sinks.md  0008-github-release-artifacts-for-package-distribution.md  0009-object-version-identity-for-upserts.md  0010-hash-join-key-and-unstructured-contract-parity.md  0011-duckdb-opt-in-write-engine-for-s3-tables.md
docs/handoff/: 2026-05-21-test-coverage-and-dependency-groups.md  2026-05-22-cluster-orchestration-design.md  2026-05-22-local-cluster-concurrency-fixes.md  2026-05-22-s3-table-sinks-implementation.md  2026-06-02-local-subset-metadata-analysis.md  2026-06-02-structured-metadata-schema-feedback.md  2026-06-19-inventory-source-spec-upgrade.md  2026-06-19-object-version-identity-shift.md
examples/: IMOS_ANMN-NSW_TZ_20090815_CH070_FV02_TEMP-gridded-timeseries_END-20240417_C-20240608.nc  example_queries.ipynb  generate_stac.py  item.json  nc_to_stac_example.ipynb
examples/data_index/: catalog.json
examples/data_index/279a50e3-21a5-4590-85a0-71f963efab82/: collection.json
src/data_index/: __init__.py  _collection.py  component_testing.py  extract.py  fsspec_testing.py  iceberg_table_config.py  load.py  main.py  orchestrate.py  protocols.py  structured_metadata.py  testing.py  transform.py
src/data_index/batch_partitioner/: __init__.py  greedy.py
src/data_index/cli/: ANALYSE_NETCDF_SCHEMA_README.md  __init__.py  analyse_netcdf_schema.py
src/data_index/cluster/: Dockerfile  README.md  __init__.py  cloud_fargate.py  docker_image.py  fargate_cluster_config.py  main.py  orchestrate.py  run_fargate.py  run_local.py
src/data_index/defaults/: cluster.py  local.py  local_subset.py
src/data_index/file_fetcher/: __init__.py  fsspec_fetcher.py  obstore_fetcher.py  s3_fetcher.py  s5cmd_fetcher.py  threshold_fetcher.py
src/data_index/iceberg_config/: __init__.py  catalog_config.py  iceberg_table_config.py  table_scan_config.py
src/data_index/inventory_source/: __init__.py  _contract.py  (+6 more)
tests/: __test_iceberg_table_sink.py  _test_s5cmd_fetcher.py  _test_threshold_fetcher.py  conftest.py  test_attribute_netcdf_extractor.py  test_components.py  test_dead_letter.py  test_delta_iceberg_table_source.py  test_disk_cached_unstructured_metadata.py  test_disk_xarray_handle.py  test_duckdb_iceberg_config.py  test_extract.py  test_fsspec_fetcher.py  test_fsspec_xarray_handle.py  test_greedy_batch_partitioner.py  test_iceberg_table_sink_duckdb.py  test_index_batch_handle_summary.py  test_live_s3_facility_subset_inventory_source.py  test_live_s3_inventory_source.py  test_magic.py  test_metadata_schema.py  test_netcdf_extractor.py  test_object_reference.py  test_obstore_fetcher.py  test_parquet_inventory_source.py  test_runners.py  test_runners_index.py  test_runners_index_batch.py  test_runners_index_integration.py  test_s3_fetcher.py  test_s3_table_inventory_source.py  test_s3_xarray_handle.py  test_s5cmd_fetcher.py  test_schema.py  test_structured_metadata.py  test_structured_parquet_sink.py  test_structured_s3_table_sink.py  test_threshold_fetcher.py  test_transform.py  test_unstructured_parquet_sink.py  (+2 more)
tests/test_components/: test_core_schemas_contract_Dead_Letter_.yml  test_core_schemas_contract_Structured_Metadata_.yml  test_core_schemas_contract_Unstructured_Metadata_.yml
(+47 files in other folders)
