[project]
name = "data-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Galindo", email = "98626996+thommodin@users.noreply.github.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "cftime>=1.6.5",
    "cloudpathlib[s3]>=0.24.0",
    "diskcache>=5.6.3",
    "fsspec>=2026.4.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "netcdf4>=1.7.4",
    "polars>=1.40.1",
    "prefect>=3.7.0",
    "pyarrow>=24.0.0",
    "pyiceberg>=0.11.1",
    "s3fs>=2026.4.0",
    "scipy>=1.17.1",
    "sh>=2.2.2",
    "xarray>=2026.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
data-index = "data_index.main:main"

[tool.prefect]
home = ".prefect"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
analysis = [
    "altair>=5",
    "ipykernel>=6",
    "jupyterlab>=4",
    "rich>=13",
]
