[project]
name = "data-index"
dynamic = ["version"]
description = "AODN Data Indexer for the `imos-data` public bucket."
readme = "README.md"
authors = [
    { name = "Tom Galindo", email = "98626996+thommodin@users.noreply.github.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "cftime>=1.6.5",
    "cloudpathlib[s3]>=0.24.0",
    "dask-cloudprovider[aws]>=2025.9.0",
    "diskcache>=5.6.3",
    "fsspec>=2026.4.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "obstore>=0.10.1",
    "polars>=1.40.1",
    "prefect>=3.7.5",
    "prefect-aws>=0.7.9",
    "prefect-dask>=0.3.6",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyiceberg>=0.11.1",
    "s3fs>=2026.4.0",
    "scipy>=1.17.1",
    "sh>=2.2.2",
    "vl-convert-python>=1.9.0.post1",
    "xarray>=2026.4.0",
]

[tool.uv]
constraint-dependencies = [
    "prefect==3.7.5",
    "prefect-aws==0.7.9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
data-index = "data_index.component_testing:main"
cluster-local = "data_index.cluster.run_local:main"
cluster-fargate = "data_index.cluster.run_fargate:main"

[tool.pytest.ini_options]
filterwarnings = ["ignore:Logger 'prefect.*' attempted to send logs"]

[tool.ruff]
exclude = ["analysis/"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "E722",   # Ignore bare `except:` errors
    "BLE001", # Ignore blind `except Exception:` errors (if needed)
]

[tool.prefect]
home = ".prefect"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "freezegun>=1.5.5",
    "pre-commit>=4.6.0",
    "prefect-docker>=0.7.1",
    "pytest>=9.0.3",
    "pytest-regressions>=2.11.0",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.49",
]
analysis = [
    "altair>=5",
    "duckdb>=1.5.3",
    "genson>=1.3.0",
    "ipykernel>=6",
    "jupyterlab>=4",
    "natsort>=8.4.0",
    "rich>=13",
]
